cluster/apps/media/openbooks/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: openbooks
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`openbooks.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: openbooks
          port: 8080
          scheme: http
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "openbooks-${SECRET_DOMAIN/./-}-tls"
